--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -2,6 +2,7 @@
     "REGISTER": "ユーザー登録",
     "LOGIN": "ログイン",
     "User Registration": "利用者側ユーザー登録",
+    "Convenience Store Registration": "コンビニ側ユーザー登録",
     "User Login": "利用者側ログイン",
     "User ForgotPassword": "利用者側パスワード変更メール送信",
     "User Reset Password": "利用者側パスワード変更"
