--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -11,5 +11,11 @@
     "User ForgotPassword": "利用者側パスワード変更メール送信",
     "User Reset Password": "利用者側パスワード変更",
     "Convenience Store ForgotPassword": "コンビニ側パスワード変更メール送信",
-    "Convenience Store Reset Password": "コンビニ側パスワード変更"
+    "Convenience Store Reset Password": "コンビニ側パスワード変更",
+    "User MyPage": "利用者側マイページ",
+    "Convenience Store MyPage": "コンビニ側マイページ",
+    "User Profile": "利用者側プロフィール編集",
+    "Convenience Store Profile": "コンビニ側プロフィール編集",
+    "User Withdraw": "利用者側退会画面",
+    "Convenience Store Withdraw": "コンビニ側退会画面"
 }
