利用者とコンビニのログイン後のマイページ遷移実装、レスポンスの受け渡し

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -14,6 +14,7 @@
     "Convenience Store Reset Password": "コンビニ側パスワード変更",
     "User MyPage": "利用者側マイページ",
     "Convenience Store MyPage": "コンビニ側マイページ",
+    "Edit Profile": "プロフィール編集",
     "User Profile": "利用者側プロフィール編集",
     "Convenience Store Profile": "コンビニ側プロフィール編集",
     "User Withdraw": "利用者側退会画面",
