利用者側とコンビニ側の退会機能実装

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -17,6 +17,7 @@
     "Edit Profile": "プロフィール編集",
     "User Profile": "利用者側プロフィール編集",
     "Convenience Store Profile": "コンビニ側プロフィール編集",
+    "Withdraw": "退会",
     "User Withdraw": "利用者側退会画面",
     "Convenience Store Withdraw": "コンビニ側退会画面"
 }
