商品詳細画面の実装、購入するボタンの切り替え

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -24,5 +24,6 @@
     "Convenience Store Product Index": "コンビニ側商品一覧",
     "ProductIndex": "商品一覧",
     "ProductSale": "商品出品",
-    "ProductEdit": "商品編集"
+    "ProductEdit": "商品編集",
+    "ProductDetail": "商品詳細"
 }
